--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+    <item
+        android:title="@string/collection"
+        android:id="@+id/menu_collect"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_star_white"/>
 <item
     android:icon="@drawable/ic_share"
     android:id="@+id/menu_action_share"
