--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="primary">#0077D9</color>
     <color name="primary_dark">#0077D9</color>
     <color name="primary_light">#0078D8</color>
@@ -18,11 +15,44 @@
     <color name="text_light">#ADADAD</color>
     <color name="text_bright">#0078D8</color>
     <color name="transparent">#00000000</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <color name="color_read">#9E9E9E</color>
+    <color name="color_unread">#000000</color>
+    <color name="color_source">#A1FFFFFF</color>
+
+    <!--日间模式-->
+    <color name="theme_Day">#3F51B5</color>
     <color name="textColorFirst_Day">#DD000000</color>
     <color name="textColorSecond_Day">#89000000</color>
     <color name="textColorThird_Day">#42000000</color>
-    <color name="color_source">#A1FFFFFF</color>
-    <color name="color_read">#9E9E9E</color>
+    <color name="background_Day">#FFFFFF</color>
+    <!--Toolbar字体颜色  -->
+    <color name="toolbar_Text_Color_Day">#DDFFFFFF</color>
+    <!--Toolbar-Menu字体颜色-->
+    <color name="toolbar_Menu_Text_Color_Day">#DD000000</color>
+    <!--Toolbar背景  -->
+    <color name="topbar_Background_Day">#3F51B5</color>
+    <!--主页item背景色-->
+    <color name="main_item_background_Day">#FFFFFF</color>
+
+    <!--夜间模式-->
+    <color name="theme_Night">#493518</color>
+    <color name="textColorFirst_Night">#DDFFFFFF</color>
+    <color name="textColorSecond_Night">#89FFFFFF</color>
+    <color name="textColorThird_Night">#42FFFFFF</color>
+    <color name="background_Night">#FF424242</color>
+    <!--Toolbar字体颜色  -->
+    <color name="toolbar_Text_Color_Night">#DDFFFFFF</color>
+    <!--Toolbar-Menu字体颜色-->
+    <color name="toolbar_Menu_Text_Color_Night">#DD000000</color>
+    <!--Toolbar背景  -->
+    <color name="topbar_Background_Night">#212121</color>
+    <color name="colorPrimaryDark_Night">#DD000000</color>
+    <!--主页item背景色-->
+    <color name="main_item_background_Night">#616161</color>
 
     <color name="night_primary">#3A3A3A</color>
     <color name="night_primary_dark">#353535</color>
