--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,13 +2,25 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
     <dimen name="tab_height">50dp</dimen>
-    <dimen name="about_text_size">16sp</dimen>
-    <dimen name="open_source_lis_text_size">14sp</dimen>
-    <dimen name="source_font_size">13sp</dimen>
+    <dimen name="text_padding">20dp</dimen>
+    <dimen name="item_padding">15dp</dimen>
+    <dimen name="title_size">20sp</dimen>
+    <dimen name="item_image_height">200dp</dimen>
+    <dimen name="text_description">16sp</dimen>
+    <dimen name="item_margin">20dp</dimen>
+    <dimen name="image_width">130dp</dimen>
+    <dimen name="divider_margin">10dp</dimen>
+    <dimen name="progressbar_width">82dp</dimen>
 
     <dimen name="spacing_xsmall">2dp</dimen>
     <dimen name="spacing_medium">8dp</dimen>
     <dimen name="spacing_large">16dp</dimen>
     <dimen name="spacing_xlarge">32dp</dimen>
+
+    <dimen name="source_font_size">13sp</dimen>
+
+    <dimen name="about_text_size">16sp</dimen>
+    <dimen name="open_source_lis_text_size">14sp</dimen>
 </resources>
