--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -108,7 +108,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -155,7 +154,8 @@
                     android:autoLink="web"
                     android:text="laucherish"
                     android:textColor="#000"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:id="@+id/textView" />
 
                 <TextView
                     android:id="@+id/tv_avator_github"
@@ -173,7 +173,26 @@
                     android:layout_toRightOf="@id/tv_avator_github"
                     android:autoLink="web"
                     android:text="https://github.com/RobbinRong"
-                    android:textColor="#000" />
+                    android:textColor="#000"
+                    android:id="@+id/textView2" />
+                <TextView
+                    android:id="@+id/tv_mail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_avator_github"
+                    android:text="mail: "
+                    android:textColor="#000"
+                 />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:autoLink="web"
+                    android:text="rongjabin@gmail.com"
+                    android:layout_toRightOf="@+id/tv_mail"
+                    android:layout_below="@+id/textView2"
+                    android:textColor="#000"
+                    />
 
             </RelativeLayout>
 
