错误页面内容居中和中文下切换成夜间模式应该显示日间模式而不是daymode

--- a/app/src/main/res/layout/include_error.xml
+++ b/app/src/main/res/layout/include_error.xml
@@ -12,6 +12,7 @@
         android:drawablePadding="10dp"
         android:drawableTop="@drawable/ic_error"
         android:scaleType="centerInside"
+        android:text="@string/load_fail"
         android:visibility="gone"
-        android:text="@string/load_fail"/>
+        android:gravity="center"/>
 </merge>
