--- a/app/src/main/res/layout/daily_item_date.xml
+++ b/app/src/main/res/layout/daily_item_date.xml
@@ -38,7 +38,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/iv_news"
+                android:id="@+id/iv_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentLeft="true"
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/spacing_medium"
-                android:layout_toRightOf="@id/iv_news"
+                android:layout_toRightOf="@id/iv_img"
                 android:lineSpacingExtra="2dp"
                 android:maxLines="3"
                 android:padding="3dp"
