--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -16,7 +16,7 @@
         >
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="260dp"
             android:id="@+id/collapsingToolbarLayout"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:contentScrim="?attr/colorPrimary"
@@ -30,21 +30,34 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:fitsSystemWindows="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="50dp"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.8"
                 app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed">
-
-                <ImageView
-                    android:id="@+id/iv_img"
-                    android:layout_width="120dp"
-                    android:layout_height="169dp"
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
-                    android:src="@drawable/ic_gaoyuanyuan"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop"
-                    />
+                    android:id="@+id/fl_img"
+                    >
+                    <ImageView
+                        android:id="@+id/iv_img"
+                        android:layout_width="120dp"
+                        android:layout_height="169dp"
+                        android:src="@drawable/ic_gaoyuanyuan"
+                        android:contentDescription="@null"
+                        android:scaleType="centerCrop"
+                        />
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/iv_play"
+                        android:src="@drawable/play"
+                        android:layout_gravity="center"
+                        />
+                </FrameLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -55,6 +68,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="title"
+                        android:textColor="#fff"
                         android:id="@+id/tv_nm"
                         android:textSize="22sp"
                         />
@@ -191,8 +205,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:id="@+id/tv_dra"
+                android:textColor="#000"
                 android:text="content content content content content content content content content content content content content content content content content "
                 />
             <TextView
