--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -203,13 +203,126 @@
             android:layout_margin="10dp"
             >
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:id="@+id/tv_dra"
                 android:textColor="#000"
                 android:text="content content content content content content content content content content content content content content content content content "
                 />
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:id="@+id/imb_show_all"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/ic_find_next_holo_light"
+                android:layout_gravity="center"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/item_divide"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="演员阵容"/>
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:id="@+id/sv_celebrity"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/ll_celebrity"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+            </HorizontalScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="主创说"/>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:src="@drawable/item_divide"
+                    android:layout_gravity="center_vertical"
+                    />
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <com.makeramen.roundedimageview.RoundedImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:scaleType="fitCenter"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:riv_corner_radius="20dip"
+                    app:riv_border_width="0dip"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="5dp"
+                    app:riv_oval="true"
+                    android:id="@+id/iv_major" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/iv_major"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="5dp"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                       >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="rong"
+                            android:layout_alignParentLeft="true"
+                            android:id="@+id/tv_major_name"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tv_major_approve"
+                            android:textSize="12sp"
+                            android:layout_alignParentRight="true"
+                            android:text="4567"/>
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_toLeftOf="@id/tv_major_approve"
+                            android:src="@drawable/zan"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_major_content"
+                        />
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:id="@+id/im_show_major_all"
+                        android:src="@drawable/ic_find_next_holo_light"
+                        android:layout_gravity="center_horizontal"
+                        />
+                </LinearLayout>
+            </RelativeLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:src="@drawable/item_divide"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
