--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
+    <color name="colorBoxRed">#dc0505</color>
+    <color name="colorBoxZanWu">#a3a3a3</color>
     <color name="color_read">#9E9E9E</color>
     <color name="color_unread">#000000</color>
     <color name="color_source">#A1FFFFFF</color>
